# inBiot_MCP_with_WeatherAPI_and_WELL_standard

./: .gitignore  CLAUDE_DESKTOP_SETUP.md  README.md  env.example  pyproject.toml  server.py  setup.py
resources/: parameters.md  thresholds_reference.md  well_performance_verification.md  well_standards.md  well_v2_scorecard.md
resources/indicators/: virus.md
src/api/: inbiot.py  openweather.py
src/models/: schemas.py
src/skills/analytics/: tools.py
src/skills/compliance/: tools.py
src/skills/monitoring/: tools.py
src/utils/: provenance.py
src/well/: compliance.py  thresholds.py
